--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "3.4.0",
     "react-scroll": "^1.7.16",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
