--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scroll": "^1.7.16",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
